# Simulare-Univers

./: CMakeLists.txt  NBodySim.cpp
Bodies/: Bodies.cpp  Bodies.hpp  BodiesEnums.hpp  BodiesGL.cpp  BodiesGL.hpp  BodiesHost.cpp  BodiesHost.hpp  InitialConditions.cpp  InitialConditions.hpp
Core/: CMakeLists.txt  Event.hpp  Layer.hpp  ResourceManager.cpp  ResourceManager.hpp  application.cpp  application.hpp  window.cpp  window.hpp
Core/include/: Core.hpp
Core/src/Core/: Event.hpp  Layer.hpp  ResourceManager.cpp  ResourceManager.hpp  application.cpp  application.hpp  window.cpp  window.hpp
Core/src/Dependencies/: CMakeLists.txt
Core/src/Dependencies/Libs/: glfw3.lib
Core/src/Dependencies/include/glad/: glad.c  glad.h
Core/src/Renderer/: Camera.cpp  Camera.hpp  Circle.cpp  Circle.hpp  CircleGL.cpp  CircleGL.hpp  Drawable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Core/src/Resources/Shaders/: circle_f32.vert  circle_f64.frag  circle_f64.vert
Physics/: Physics.hpp  PhysicsGL.hpp
Physics/ForceFinder/: ff_enum.hpp
Physics/ForceFinder/cshaders/: force_finder_f32.comp  force_finder_f64.comp
Physics/ForceFinder/ffgl/: ff_gl.hpp  ff_gl_factory.cpp  ff_gl_factory.hpp  ff_gl_g_abstract.cpp  ff_gl_g_abstract.hpp  ff_gl_g_direct.cpp  ff_gl_g_direct.hpp
Physics/ForceFinder/ffhost/: ff_host.hpp  ff_host_factory.hpp  ff_host_g_abstract.cpp  ff_host_g_abstract.hpp  ff_host_g_bh.cpp  ff_host_g_bh.hpp  ff_host_g_direct.cpp  ff_host_g_direct.hpp  ff_host_g_direct_simd.cpp
Physics/ForceFinder/ffutils/: ff_utils.hpp
Physics/Integrator/: integrator_enum.hpp
Physics/Integrator/cshaders/EulerImplicit/: euler_implicit_f32.comp  euler_implicit_f64.comp
Physics/Integrator/cshaders/Leapfrog/: leapfrog_first_stage_f32.comp  leapfrog_first_stage_f64.comp  leapfrog_second_stage_f32.comp  leapfrog_second_stage_f64.comp
Physics/Integrator/cshaders/acc/: acc_f32.comp  acc_f64.comp
Physics/Integrator/igl/: integrator_gl.hpp  integrator_gl_euler_implicit.cpp  integrator_gl_factory.hpp  integrator_gl_leapfrog.cpp
Physics/Integrator/ihost/: integrator_h.hpp  integrator_h_euler_explicit.cpp  integrator_h_euler_implicit.cpp  integrator_h_factory.hpp  integrator_h_leapfrog.cpp  integrator_h_rk2.cpp
Renderer/: Camera.cpp  Camera.hpp  Circle.cpp  Circle.hpp  CircleGL.cpp  CircleGL.hpp  Drawable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Resources/Shaders/: circle_f32.frag  circle_f32.vert  circle_f64.vert
imgui/: imgui.cpp  imgui.h
src/: AppResources.hpp  DispatcherGui.cpp  DispatcherGui.hpp  EventGui.hpp  OverlayMenu.cpp  OverlayMenu.hpp  OverlayMenuSimComp.cpp  OverlayMenuSimComp.hpp  OverlayMenuSimCompGL.cpp  OverlayMenuSimCompGL.hpp  OverlayMenuSimCompH.cpp  OverlayMenuSimCompH.hpp  PlatformEnum.hpp  ProgramState.hpp  ResourceNames.hpp  SimulationContext.cpp  SimulationContext.hpp  SimulationContextManager.cpp  SimulationContextManager.hpp  SimulationGL.cpp  SimulationGL.hpp  SimulationHost.cpp  SimulationHost.hpp  SimulationInterface.hpp  SimulationState.hpp  TaskManager.cpp  TaskManager.hpp  Timer.cpp  Timer.hpp  logger.hpp
